<?xml version="1.0" encoding="utf-8" ?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="520dip" android:layout_height="wrap_content"
	android:orientation="vertical">

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_weight="1"
		android:orientation="vertical" android:paddingTop="5dip"
		android:paddingBottom="13dip" android:paddingLeft="20dip" android:paddingRight="20dip">
		<TextView android:textAppearance="?android:attr/textAppearanceSmall"
			android:textStyle="bold" android:id="@+id/username_label"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/login_activity_username_label" />
		<EditText android:id="@+id/username_edit" android:singleLine="true"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:scrollHorizontally="true"
			android:capitalize="none" android:autoText="false" android:imeOptions="actionNext|flagNoExtractUi" android:inputType="textEmailAddress" android:text="admin"/>

		<TextView android:textAppearance="?android:attr/textAppearanceSmall"
			android:textStyle="bold" android:singleLine="true" android:id="@+id/password_label"
			android:layout_marginTop="2dip" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:text="@string/login_activity_password_label" />
		<EditText android:id="@+id/password_edit" android:singleLine="true"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:scrollHorizontally="true"
			android:capitalize="none" android:autoText="false" android:password="true"
			android:inputType="textPassword" android:imeOptions="flagNoExtractUi"/>

		<TextView android:textAppearance="?android:attr/textAppearanceSmall"
			android:id="@+id/server_address_label" android:textStyle="bold" 
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/login_activity_server_address_label"/>
		<EditText android:id="@+id/server_address_edit"
			android:singleLine="true" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:scrollHorizontally="true" android:capitalize="none"
			android:autoText="false" android:enabled="true" android:focusable="true"
			android:focusableInTouchMode="true" android:imeOptions="flagNoExtractUi" android:inputType="textEmailAddress" android:text="58.240.209.238"/>

		<TextView android:id="@+id/message" android:textAppearance="?android:attr/textAppearanceSmall"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginBottom="4dip" />
		

	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:background="#c6c3c6"
		android:minHeight="54dip" android:paddingTop="24dip"
		android:paddingLeft="2dip" android:paddingRight="2dip"
		android:orientation="horizontal" android:gravity="center_horizontal">
		<Button android:id="@+id/save_button" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
			android:minWidth="100dip" android:text="@string/login_activity_save_button"
			android:clickable="false"/>
		<Button android:id="@+id/cancel_button" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
			android:minWidth="100dip" android:text="@string/login_activity_cancel_button"/>
	</LinearLayout>
</LinearLayout>
